# wp-hubstack

./: .gitignore  docker-compose-template.yml  mypy.ini
.github/workflows/: mypy.yml
docker/advanced-wordpress/: Dockerfile  container-init.sh  wp-config.php
scripts/: run_mypy.sh
scripts/one-offs/banner-air-cleanup/: README.md  requirements.txt  run.sh
scripts/one-offs/banner-air-cleanup-go/: go.mod  main.go  run.sh
scripts/server/: BIND-MOUNTS.md  add-restart-always-to-wp-manager.sh  archive-after-30-days.sh  backup.sh  cancel.sh  check-active-domains.sh  check-cloudflare-domain.sh  clean-fstab.sh  elementor-export-requirements.txt  elementor-export-to-drive.py  enable-proxied-status.sh  get_a_records.sh  get_a_records_all.sh  inactive-domains.sh  install-wp-activity-log.sh  inventory.json  jailbird.sh  migrate-sites.sh  run-backups.sh  run-elementor-export.sh  run-enable-proxied-status.sh  run-ssl-validation-urls.sh  set-internal-perms.sh  ssl-validation.sh
scripts/server/add-sites-to-uptime-kuma/: .env  README.md  main.py  requirements-uptime-kuma.txt  run.sh  uptime-kuma-env-sample.txt
scripts/server/apache-mem-fix/: CONFIGURATION_GUIDE.md  TIERED_DEPLOYMENT_GUIDE.md  apply_fix.sh  mpm_prefork.conf  mpm_prefork.conf.tier1  mpm_prefork.conf.tier2  php-fpm-pool.conf  php-fpm-pool.conf.tier1  php-limits.ini  (+2 more)
scripts/server/site-optimizer/: .env.example  .gitignore  CLASSIFICATION_GUIDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/server/site-optimizer/config/: README.md  mpm_prefork.conf.tier3  php-fpm-pool.conf.tier2  php-limits.ini  php-limits.ini.tier1  php-limits.ini.tier2
scripts/server/site-optimizer/data/: example-sites.csv  example-sites.json
scripts/server/site-optimizer/src/: cli.py
scripts/server/site-optimizer/src/commands/: __init__.py  classify.py  deploy.py  inventory.py
scripts/server/site-optimizer/src/models/: __init__.py  deployment.py  server.py  site.py
scripts/server/site-optimizer/src/services/: __init__.py  classifier.py  deployer.py  inventory.py
scripts/server/site-optimizer/src/utils/: __init__.py  config.py
scripts/server/site-optimizer/tests/: conftest.py  test_classifier.py  test_inventory.py
scripts/server/traefik-netbird-config/: .env.example  Dockerfile  README.manager.md  add-config-dry-run.sh  add-config-restart.sh  add-config.sh  additions.example.yaml  additions.yml  deployment-example.txt  docker-compose.manager.yml  docker-compose.yml  iptables-netbird.sh  pyproject.toml  requirements.txt  test-endpoints.sh
scripts/server/traefik-netbird-config/dynamic/: traefik-api.yml
scripts/server/traefik-netbird-config/src/: __init__.py  cli.py  manager.py  models.py  utils.py
services/cache/: docker-compose.yml
services/traefik/: docker-compose.yml
shared/: README.md
shared/mu-plugnis/: README.md
websites/: README.md
websites/mu-plugins/: block-file-managers.php  log-whisperer.php
(+83 files in other folders)
